# grumpr

./: Cargo.toml  README.md
corpus/: .gitkeep
src/: dataset.rs  gram.rs  lib.rs  main.rs
src/cli/: builtins.rs  enumfile.rs  mod.rs  reclap.rs
src/librarian/: anagram.rs  error.rs  grams.rs  library.rs  mod.rs  search.rs  stats.rs  subset.rs  test.rs
src/librarian/search/: automata.rs  levenshtein.rs  mod.rs  multi_dfa.rs  nest.rs  node.rs  nodes.rs  permutation.rs  query.rs
src/trie/: iter.rs  keys.rs  mod.rs  node.rs  refs.rs  test.rs
web/: Cargo.toml
web/src/: lib.rs
