[package]
name = "grumpr"
version = "0.2.0"
edition = "2021"
authors = ["Thomas Woolhouse <thomasrwoolhouse@gmail.com>"]
description = "A tool for searching and finding words."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
serde = { version = "1.0.159", features = ["derive"] }
itertools = "0.13.0"
regex = "1.7.3"
clap = { version = "4.2.1", features = ["cargo", "derive", "string"] }
indoc = "2.0.1"
thiserror = "1.0.40"
unicode-segmentation = "1.10.1"
unicode_categories = "0.1.1"
cached = "0.52.0"
encoding_rs_io = "0.1.7"
encoding_rs = "0.8.35"
