[package]
name = "grumpr"
version = "0.3.0"
edition = "2024"
authors = ["Thomas Woolhouse <thomasrwoolhouse@gmail.com>"]
description = "A tool for searching and finding words."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
regex = "1.7.3"
regex-automata = "0.4.9"
regex-syntax = "0.8.5"
smallvec = "1.15.1"
thiserror = "1.0.40"

clap = { version = "4.2.1", features = [
	"cargo",
	"derive",
	"string",
], optional = true }
clio = { version = "0.3.5", features = ["clap-parse"], optional = true }
csv = { version = "1.2.1", optional = true }
include-flate = { version = "0.3.0", optional = true }
serde = { version = "1.0.159", features = ["derive"], optional = true }

unicode-segmentation = "1.10.1"
unicode_categories = "0.1.1"
cached = "0.52.0"
encoding_rs_io = "0.1.7"
encoding_rs = "0.8.35"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:clio", "dep:csv", "dep:include-flate", "serde"]
serde = ["dep:serde"]

[[bin]]
name = "grumpr"
required-features = ["cli"]
