[package]
name = "grumpr_wasm"
version = "0.1.0"
authors = ["Thomas Woolhouse <thomasrwoolhouse@gmail.com>"]
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
log = ["console_error_panic_hook"]

[dependencies]
grumpr = { version = "0.3.0", path = "./../", default-features = false }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
strum = { version = "0.27", features = ["derive"] }
include-flate = "0.3"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
itertools = "0.14"
